[package]
name = "manhuamao"
version = "0.1.0"
authors = ["fwc <fwc@DESKTOP-6U746E3>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
lz-str = { git = "https://github.com/adumbidiot/lz-str-rs" }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
soup = "0.5.1"
regex = "1.5.2"
rust-crypto = "0.2.36"
